:art: Improved perfomance and the file structure

--- a/package.json
+++ b/package.json
@@ -1,9 +1,32 @@
 {
   "name": "react-highlightjs-logs",
-  "version": "1.0.41",
+  "version": "0.0.42",
   "author": "Abdhesh Nayak",
   "license": "MIT",
   "description": "A easy to use react logs rendring component.",
+  "private": false,
+  "types": "./dist/@types/index.d.ts",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "sideEffects": false,
+  "exports": {
+    "./dist/index.css": {
+      "import": "./dist/index.css",
+      "require": "./dist/index.css"
+    },
+    ".": {
+      "import": {
+        "default": "./dist/index.mjs"
+      },
+      "require": {
+        "default": "./dist/index.js"
+      }
+    }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/abdheshnayak/react-highlightjs-logs"
+  },
   "keywords": [
     "accesslog",
     "react",
@@ -11,69 +34,62 @@
     "highlight.js",
     "ui"
   ],
-  "private": false,
-  "main": "dist/index.js",
-  "module": "dist/index.js",
   "files": [
     "dist",
     "README.md",
     "LICENSE"
   ],
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/abdheshnayak/react-highlightjs-logs"
-  },
-  "dependencies": {
-    "axios": "^0.27.2",
-    "classnames": "^2.3.1",
-    "core-js": "^3.24.1",
-    "highlight.js": "^11.6.0",
-    "react-icons": "^4.4.0",
-    "regenerator-runtime": "^0.13.9",
-    "uuid": "^8.3.2",
-    "websocket": "^1.0.34"
+  "publishConfig": {
+    "access": "public"
   },
   "scripts": {
-    "build": "rm -rf dist && NODE_ENV=production babel src/lib --out-dir dist --copy-files && npm run react-build",
-    "react-build": "CI=false GENERATE_SOURCEMAP=false react-scripts build && mkdir -p dist/styles && cp build/static/css/main*.css dist/styles/index.css",
-    "start": "react-scripts start",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "npm run clean && npm run build:css && node build.js && npm run tsc",
+    "pack": "npm pack --pack-destination ./out",
+    "clean": "rimraf dist",
+    "dev:build": "npm run build",
+    "tsc": "tsc --emitDeclarationOnly --outDir ./dist/@types",
+    "build:css": "tailwindcss -i ./src/scss/build.scss -o ./src/css/index.scss"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "dependencies": {
+    "react-icons": "^4.4.0"
   },
-  "devDependencies": {
-    "@babel/cli": "^7.18.10",
-    "@babel/core": "^7.18.10",
-    "@babel/polyfill": "^7.12.1",
-    "@babel/preset-env": "^7.18.10",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "autoprefixer": "^10.4.8",
-    "postcss": "^8.4.14",
+  "peerDependencies": {
+    "react-viewport-list": "^7.1.1",
+    "anser": "^2.1.1",
+    "fuse.js": "^6.6.2",
+    "axios": "^1.5.0",
+    "classnames": "^2.3.1",
+    "highlight.js": "^11.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "sass": "^1.54.3",
-    "scss": "^0.2.4",
-    "tailwindcss": "^3.1.8",
-    "web-vitals": "^2.1.4"
+    "websocket": "^1.0.34"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "@types/react": "^18.2.22",
+    "@types/react-dom": "^18.2.7",
+    "@types/uuid": "^9.0.4",
+    "@types/websocket": "^1.0.6",
+    "@typescript-eslint/eslint-plugin": "^6.4.1",
+    "@typescript-eslint/parser": "^6.4.1",
+    "esbuild": "^0.19.2",
+    "esbuild-sass-plugin": "^2.15.0",
+    "eslint": "^8.47.0",
+    "eslint-config-airbnb": "19.0.4",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-import-resolver-jsconfig": "^1.1.0",
+    "eslint-import-resolver-node": "^0.3.6",
+    "eslint-import-resolver-typescript": "^3.6.0",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prefer-arrow-functions": "^3.1.4",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "prettier": "^2.8.8",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "rimraf": "^5.0.1",
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.2.2"
   }
 }
